vpc.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "vpc template",
    "Metadata": {},
    "Parameters": {        
        "addressBlock": {
            "Description": "management address block",
            "Type": "String",
            "Default": "172.16.0.0/24"
        }
    },
    "Resources": {
        "vpcManagement": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "addressBlock"
                },
                "Tags": [
                {
                    "Key": "role",
                    "Value": "networking"
                }
                ]
            }
        },
        "sgBastion": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "-",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "22",
                        "ToPort": "22"
                    },
                    {
                        "IpProtocol": "icmp",
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "8",
                        "ToPort": "-1"
                    }
                ],
                "VpcId": {
                    "Ref": "vpcManagement"
                },
                "Tags": [
                {
                  "Key": "role",
                  "Value": "networking"
                }
                ]
            }
        },
        "sgWeb": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "-",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "SourceSecurityGroupId": {
                            "Ref": "sgBastion"
                        }
                    },
                    {
                        "IpProtocol": "icmp",
                        "FromPort": "8",
                        "ToPort": "-1",
                        "SourceSecurityGroupId": {
                            "Ref": "sgBastion"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/"
                    }
                ],
                "VpcId": {
                    "Ref": "vpcManagement"
                },
                "Tags": [
                    [
                    {
                      "Key": "role",
                      "Value": "networking"
                    }
                    ]
                ]
            }
        }
    },
    "Outputs": {
        "vpcManagementId": {
            "Description": "management vpc id",
            "Value": {
                "Ref": "vpcManagement"
            }
        },
        "sgWebId": {
            "Description": "web security group id",
            "Value": {
                "Ref": "sgWeb"
            }
        },
        "sgBastionId": {
            "Description": "bastion security group id",
            "Value": {
                "Ref": "sgBastion"
            }
        }
    }
}
